Fix comma in price column.